--- a/moveit/src/styles/pages/Home.module.css
+++ b/moveit/src/styles/pages/Home.module.css
@@ -1,19 +1,19 @@
 .container {
-    height: 100vh;
-    max-width: 992px;
-    margin: 0 auto;
-    padding: 2.5rem 2rem;
-    display: flex;
-    flex-direction: column;
+  height: 100vh;
 
+  max-width: 80vw;
+  /* max-width: 992px; */
+  margin: 0 auto;
+  padding: 2.5rem 2rem;
+  display: flex;
+  flex-direction: column;
 }
 
-
-
-  .container section{
-      flex: 1;
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 6.25rem;
-      align-content: center;
-  }
+.container section {
+  flex: 1;
+  display: grid;
+  margin-top: 4rem;
+  grid-template-columns: 1fr 1fr;
+  gap: 6.25rem;
+  align-content: center;
+}
