Was created the menuBar component.

--- a/moveit/src/styles/components/ChallengeBox.module.css
+++ b/moveit/src/styles/components/ChallengeBox.module.css
@@ -119,6 +119,11 @@
   background: var(--green);
 }
 
+.challengeFailedButton:focus,
+.challengeSucceededButton:focus {
+  outline: none;
+}
+
 .challengeActive footer button:hover {
   filter: brightness(0.9);
 }
