--- a/moveit/src/styles/components/Countdown.module.css
+++ b/moveit/src/styles/components/Countdown.module.css
@@ -88,6 +88,10 @@
   transition: background-color 0.2s;
 }
 
+#countdownButton:focus{
+  outline: none;
+}
+
 #countdownButton:not(:disabled):hover {
   background: var(--blue-dark);
 }
