--- a/moveit/src/styles/pages/Home.module.css
+++ b/moveit/src/styles/pages/Home.module.css
@@ -1,3 +1,10 @@
+#containerPage {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .container {
   height: 100vh;
 
